@@ -47,8 +47,7 @@
  * Licence: ``Apache-2.0``
  * Versions:
 
-  * `0.3.3 <https://github.com/JNRowe/misc-overlay/blob/master/media-gfx/seqdiag/seqdiag-0.3.3.ebuild>`__  ``amd64``, ``x86``
-  * `0.3.5 <https://github.com/JNRowe/misc-overlay/blob/master/media-gfx/seqdiag/seqdiag-0.3.5.ebuild>`__  ``amd64``, ``~x86`` (due 2011-07-07)
+  * `0.3.5 <https://github.com/JNRowe/misc-overlay/blob/master/media-gfx/seqdiag/seqdiag-0.3.5.ebuild>`__  ``amd64``, ``x86``
 
 * ``sng`` - http://www.catb.org/~esr/sng/
 
