@@ -1,17 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA512
 
-DIST seqdiag-0.3.3.tar.gz 23201 RMD160 64ad52d2c565c66b68fdeea0e3b9a9f5fec7371f SHA1 bee2be946e465db73a065462a959773e3db6087b SHA256 e8e93b22da21036551bb137f5da190c91255e6ee19ce1c2a80fe8792d64f5e23
 DIST seqdiag-0.3.5.tar.gz 23276 RMD160 2bc7fc1e44b11b70e09dca0672e6687242faa5a9 SHA1 e8201b5b541ea0241285e55712939612c87ccffa SHA256 5391d28d516d84b9a12081b47d2183dd727330073dfccf53dd3c57171557b328
-EBUILD seqdiag-0.3.3.ebuild 1315 RMD160 90894b7dd91bf828ec486d3981624a8cc9752fa4 SHA1 9947fd774fc1bff8e7d6286c65dad7390b713e5f SHA256 92a7a63a0ba26825181bf1d6d0efaa0d074d58f5c7b9497d3b612b21d0fc83b7
-EBUILD seqdiag-0.3.5.ebuild 1316 RMD160 57a2c4a8ccf4820952e2e2780bd64c82b0867ddb SHA1 084ffec04c71ab08e0c501518cc1488c0ea30ed0 SHA256 4d5539b87c5258b1a025ae5933a3298f3fb56078bee0eb0458f3e0cea8c2b879
-MISC ChangeLog 2708 RMD160 b1918eca3e0a6c26b839f6729edd06635ee48598 SHA1 43e0e65c51a4a26842833e7a1759c04f2c7cb96e SHA256 f698cbf234c09d12a208c52079e952ad330dd50a6eb574d618ee7e2887e55822
+EBUILD seqdiag-0.3.5.ebuild 1315 RMD160 90894b7dd91bf828ec486d3981624a8cc9752fa4 SHA1 9947fd774fc1bff8e7d6286c65dad7390b713e5f SHA256 92a7a63a0ba26825181bf1d6d0efaa0d074d58f5c7b9497d3b612b21d0fc83b7
+MISC ChangeLog 2818 RMD160 6c3d7cab769beaa022f357589a9240fbbf0f2d0c SHA1 d07d8110a77a48958565f0095e771f0a4349a5e2 SHA256 1c1deaa790efeaf2d7a1c2e394ee071befdfb779448e96ae889b3a4f3d674065
 MISC metadata.xml 570 RMD160 59bfcf070c7d4c7572454863d588c77bc1c1b55c SHA1 032a17bdf85ce580d75f65ce1d630dbaa1c10fc8 SHA256 a6dc2ad7ee618a09643e701df56441097c7973bb55e4077d002d196ac0ad50cb
 MISC watch 12 RMD160 93a2adec9e10f09240c494996f1b879ab1a61113 SHA1 d61fd79473fa9466604269b1d76a71d70ed24b7a SHA256 806ffafa2258c82b35917a67c5f7faff76604958adae5efb722ca9ef82ee2874
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk4VjjAACgkQzJrj3cAXR0maaACfSVACOdQDzjvVB2OPcqtn0lKG
-s18AoIt8y662JeY5/ownJBQNIqF1mzyY
-=GX/5
+iEYEAREKAAYFAk4VssgACgkQzJrj3cAXR0mMOACgmenZv6NRGfDhqzDztqhK+Z0H
+RHcAoJbCqGha97IgrrGzoscW6v7TPol0
+=xKzG
 -----END PGP SIGNATURE-----
