@@ -16,7 +16,7 @@ DESCRIPTION="Generate sequence-diagram image files from spec-text files"
 
 LICENSE="Apache-2.0"
 SLOT="0"
-KEYWORDS="amd64 ~x86"
+KEYWORDS="amd64 x86"
 IUSE="examples minimal pdf test"
 
 DEPEND="dev-python/setuptools
