@@ -6,7 +6,7 @@ mirror://pypi/s/seqdiag/seqdiag-0.3.5.tar.gz
 http://pypi.python.org/pypi/seqdiag/
 Apache-2.0
 Generate sequence-diagram image files from spec-text files
-amd64 ~x86
+amd64 x86
 distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
 examples minimal pdf test test
 
