@@ -1,4 +1,3 @@
-* media-gfx/seqdiag-0.3.5                     x86 SCHEDULED: <2011-07-07 Thu>
 * media-gfx/sphinxcontrib-blockdiag-0.8.3     x86 SCHEDULED: <2011-07-07 Thu>
 * app-misc/jsonpipe-0.0.8                     x86 SCHEDULED: <2011-07-07 Thu>
 * app-text/sphinxcontrib-httpdomain-1.1.2     x86 SCHEDULED: <2011-07-07 Thu>
